# a2a

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.base  LICENSE  Makefile  README.cn.md  README.md
.github/workflows/: rust.yml
a2a/: .gitignore  Cargo.toml
a2a/src/: app_conf.rs  code.md  coder.rs  config_loader.rs  init.rs  main.rs  run.rs
a2a/src/coder/: chat_stream.rs  mcps.rs  mod.rs  openai.rs
a2a/src/serve/: admin.rs  api.rs  mod.rs  run.rs  scheduler.rs  workspace.rs  writer.rs
a2a/src/serve/mcp/: mod.rs  sse_server.rs
a2a/test_app/api/: echo.js
a2a/test_app/scheduler/: a2a_01.json  config.json  shell_01.json
a2a/test_scripts/: case001.js  case002.js
a2a/test_scripts/conf/: config.json
a2a_core/: .gitignore  Cargo.toml
a2a_core/src/: email_action.rs  file.rs  file_action.rs  http.rs  http_action.rs  lib.rs  llm_action.rs  notify_action.rs  save_point.rs  shell_action.rs  utils.rs
a2a_core/src/crawl_action/: crawl_system.md  mod.rs  pure_html.js  url.rs  web_search_action.rs
a2a_core/src/enc_action/: encode.rs  encrypt.rs  hash.rs  hmacs.rs  mod.rs
a2a_core/src/sql/: mod.rs  pgsql.rs  sqlite.rs
a2a_core/src/sql_action/: mod.rs  mysql.rs  pgsql.rs  sqlite.rs
a2a_core/tests/: test_action.rs  test_replace.rs
a2a_quickjs/: Cargo.toml
a2a_tojson/: Cargo.toml
a2a_tojson/src/: config_loader.rs  csv.rs  data_bytes.rs  encoding.rs  excel.rs  ini.rs  lib.rs  ndjson.rs  utils.rs  yaml.rs
a2a_tojson/src/json2excel/: excel.rs  html.rs  mod.rs  table.rs
a2a_tojson/tests/: bytes_test.rs  csv_test.rs  ini_test.rs  yaml_test.rs
a2a_types/: Cargo.toml
a2a_types/src/: convert.rs  lib.rs  value_bytes.rs
articles/: a.md  can_llm_replace_programmer.md
bindings/nodejs/: .gitignore  Cargo.toml  a2a.d.ts  a2a.js  action.ts  index.d.ts  index.js  package.json
bindings/nodejs/.github/workflows/: CI.yml
bindings/nodejs/__test__/: index.spec.ts
bindings/nodejs/__test__/conf/: config.json
bindings/nodejs/npm/android-arm-eabi/: README.md  package.json
bindings/nodejs/npm/android-arm64/: README.md  package.json
bindings/nodejs/npm/darwin-arm64/: README.md  package.json
bindings/nodejs/npm/darwin-x64/: README.md  package.json
bindings/nodejs/npm/freebsd-x64/: README.md  package.json
bindings/nodejs/npm/linux-arm-gnueabihf/: README.md  package.json
bindings/nodejs/npm/linux-arm64-gnu/: README.md  package.json
bindings/nodejs/npm/linux-arm64-musl/: README.md  package.json
bindings/nodejs/npm/linux-x64-gnu/: README.md  package.json
bindings/nodejs/npm/linux-x64-musl/: README.md  package.json
bindings/nodejs/npm/win32-arm64-msvc/: README.md  package.json
bindings/nodejs/npm/win32-ia32-msvc/: README.md  package.json
bindings/nodejs/npm/win32-x64-msvc/: README.md  package.json
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs  value_to_dict.rs
bindings/python/tests/: a.py
etc/apt/: sources.list
etc/cargo/: config.toml
examples/api/: echo.js
examples/cases/: README.cn.md  README.md
examples/cases/case01/: case01.azure-openai.gpt-4o-mini.js  case01.azure-openai.gpt-4o.js  case01.bedrock.anthropic.claude-3-5-sonnet-20240620-v1.js  case01.bedrock.anthropic.claude-3-haiku-20240307-v1.js  case01.bedrock.anthropic.claude-3-sonnet-20240229-v1.js  case01.chuanshen.rendu-2.5.js  case01.clean.js  case01.deepseek.deepseek-chat.js  case01.deepseek.deepseek-coder.js  case01.doubao.Doubao-lite-32k.js  case01.doubao.Doubao-pro-32k.js  case01.groq.gemma2-9b-it.js  case01.groq.llama-3.1-70b-versatile.js  case01.groq.llama-3.1-8b-instant.js  case01.groq.mixtral-8x7b-32768.js  case01.lingyi.yi-lightning.js  case01.md  case01.qwen.qwen-long.js  case01.qwen.qwen-max.js  case01.qwen.qwen-plus-latest.js  case01.qwen.qwen-plus.js  case01.qwen.qwen-turbo-latest.js  case01.qwen.qwen-turbo.js  case01.sh  case01.vertex-ai.gemini-1.5-flash.js  case01.vertex-ai.gemini-1.5-pro.js  case01.zhipu.glm-4-flash.js  case01.zhipu.glm-4-plus.js  models.txt  models2.txt
examples/cases/case011/: case011.doubao.doubao-pro-32k.js  case011.md  case011.vertex-ai.gemini-2.0-flash-exp.js
examples/cases/case02/: azure-openai.gpt-4o-mini.js  azure-openai.gpt-4o.js  deepseek.deepseek-coder.js  vertex-ai.gemini-1.5-flash.js  zhipu.glm-4-flash.js  zhipu.glm-4-plus.js
examples/cases/case03/: case03.azure-openai.gpt-4o.js  case03.chuanshen.rendu-2.5.js  case03.cn.md  case03.deepseek.deepseek-chat.js  case03.deepseek.deepseek-coder.js  case03.md  case03.model-scope.Qwen_Qwen3-Coder-30B-A3B-Instruct.js  case03.qwen.qwen-plus-latest.js  case03.qwen.qwen-plus.js  case03.vertex-ai.gemini-1.5-flash.js  case03.xai.grok-beta.js
examples/cases/case04/: case04.azure-openai.gpt-4o-mini.js  case04.deepseek.deepseek-coder.js  case04.lingyi.yi-lightning.js  case04.md  case04.qwen.qwen-plus.js  case04.vertex-ai.gemini-1.5-flash-002.js  case04.vertex-ai.gemini-1.5-pro-002.js  case04.xai.grok-beta.js
examples/cases/case05/: case05.cn.md  case05.md  case05.qwen.qwen-plus-latest.js  case05.vertex-ai.gemini-2.5-flash-preview-05-20.js  config.json  main.js
examples/cases/case06/: case06.azure-openai.gpt-4o-mini.js  case06.js  case06.md  case06.vertex-ai.gemini-2.0-flash-exp.js
examples/cases/case07/: case.vertex-ai.gemini-2.0-flash-exp.js  case07.md
examples/cases/case08/: case.vertex-ai.gemini-2.0-flash-001.js  case.vertex-ai.gemini-2.0-flash-exp.js  case08.md  teslasupplychain_analysis.md
examples/cases/case09/: case.md  case.vertex-ai.gemini-2.0-flash-001.js  case09.cn.md  case09.md  case09.vertex-ai.gemini-2.5-flash-preview-05-20.js
examples/cases/case10/: case10.md  case10.vertex-ai.gemini-2.0-flash-001.js  case10.vertex-ai.gemini-2.5-flash-preview-04-17.js  mcp.md
examples/cases/case11/: case11.md  case11.qwen.qwen-plus-latest.js
examples/cases/case12/: case12.cn.md  case12.md  case12.vertex-ai.gemini-2.5-flash-preview-05-20.js
examples/cases/case13/: case13.cn.md  case13.md  (+2 more)
examples/conf/: config.json
examples/html/: index.html
examples/scheduler/: echo.json
(+4 files in other folders)
