[workspace]
resolver = "2"
members = [
  "a2a",
  "a2a_core",
  "a2a_tojson",
  "a2a_types",
  "bindings/nodejs",
  "bindings/python",
]

[workspace.dependencies]
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["stream", "json"] }
bytes = { version = "1", features = ["serde"] }
tracing = "0.1"
base64-simd = "0.8"
hex-simd = "0.8"
urlencoding = "2.1"
serde_yml = "0.0.12"
thiserror = "1"
time = "0.3"
futures = "0.3"
rand = "0.9"
glob = "0.3"

[workspace.package]
version = "0.1.13"
authors = ["LiJia<lijia.c@gmail.com>"]
edition = "2021"


[patch.crates-io]
# imap-next = { git = "https://github.com/duesee/imap-next" }
# imap-client = { git = "https://github.com/pimalaya/imap-client" }

[profile.release]
strip = true
opt-level = "z" # Optimize for size.
lto = "fat"

[profile.release-dev]
inherits = "release"
lto = "off"
