[package]
name = "a2a"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
quickjs-rusty = { version = "0.9", features = ["bigint"] }
futures.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2" }
clap = { version = "4.5", features = ["derive", "env"] }
glob.workspace = true
a2a_tojson = { path = "../a2a_tojson" }
a2a_core = { path = "../a2a_core" }
a2a_types = { path = "../a2a_types" }
reqwest.workspace = true
time.workspace = true
dotenvy = "0.15"
tokio-util.workspace = true
axum = { version = "0.8", features = ["macros", "query"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
croner = "2"
chrono = { version = "0.4" }
indexmap = "2"
bytes.workspace = true
pin-project-lite = "0.2"
axum-streams = { version = "0.20", features = ["text"] }
axum-extra = { version = "0.10", features = ["multipart"] }
tempfile = "3"
rand.workspace = true
rmcp = { version = "0.5", features = [
  "transport-sse-server", 
  "transport-streamable-http-server",
  "transport-child-process",
  "transport-sse-client",
  "transport-streamable-http-client",
] }
tokio-stream = "0.1.17"
local-ip-address = "0.6.5"
webbrowser = "1.0.4"
schemars = "1"
