[package]
name = "a2a_core"
version = "0.1.0"
edition = "2021"

[dependencies]
a2a_types = { path = "../a2a_types" }
a2a_tojson = { path = "../a2a_tojson" }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "all-databases",
  "time",
  "json",
] }
serde_json.workspace = true
anyhow.workspace = true
quick-xml = { version = "0.36", features = ["serialize", "overlapped-lists"] }
tokio.workspace = true
opendal = { version = "0.49", features = [
  "services-azblob",
  "services-azdls",
  "services-cos",
  "services-fs",
  "services-gcs",
  "services-ghac",
  "services-http",
  "services-ipmfs",
  "services-memory",
  "services-obs",
  "services-oss",
  "services-s3",
  "services-webdav",
  "services-webhdfs",
  "services-ftp",
  "services-redis",
] }
tracing.workspace = true
reqwest.workspace = true
bytes.workspace = true
time.workspace = true
regex = "1"

[dev-dependencies]
tokio.workspace = true
serde.workspace = true
