[package]
name = "a2a_core"
version = "0.1.0"
edition = "2021"

[dependencies]
a2a_types = { path = "../a2a_types" }
a2a_tojson = { path = "../a2a_tojson" }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "all-databases",
  "time",
  "json",
] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] }
tokio.workspace = true
opendal = { version = "0.51", features = [
  "services-azblob",
  "services-azdls",
  "services-cos",
  "services-fs",
  "services-gcs",
  "services-ghac",
  "services-http",
  "services-ipmfs",
  "services-memory",
  "services-obs",
  "services-oss",
  "services-s3",
  "services-webdav",
  "services-webhdfs",
  "services-ftp",
  "services-redis",
] }
tracing.workspace = true
reqwest.workspace = true
bytes.workspace = true
time.workspace = true
regex = "1"
email-lib = { version = "0.26", features = [
  "autoconfig",
  "imap",
  "smtp",
  "oauth2",
  "derive",
  "keyring",
] }
mail-parser = "0.9"
async-trait = "0.1"
base64-simd.workspace = true
hex-simd.workspace = true
urlencoding.workspace = true

md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
cbc = "0.1"
rand = "0.8"


[dev-dependencies]
tokio.workspace = true
serde.workspace = true
rustls = { version = "0.23", features = ["default"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
