[package]
name = "a2a_core"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]

a2a_types = { path = "../a2a_types" }
a2a_tojson = { path = "../a2a_tojson" }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "all-databases",
  "time",
  "json",
] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
quick-xml = { version = "0.39", features = ["serialize", "overlapped-lists"] }
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
opendal = { version = "0.55", features = [
  "services-azblob",
  "services-azdls",
  "services-cos",
  "services-fs",
  "services-gcs",
  "services-ghac",
  "services-http",
  "services-ipmfs",
  "services-memory",
  "services-obs",
  "services-oss",
  "services-s3",
  "services-webdav",
  "services-webhdfs",
  "services-ftp",
  "services-redis",
] }
tracing.workspace = true
reqwest.workspace = true
bytes.workspace = true
time.workspace = true
regex = "1"
glob.workspace = true
email-lib = { version = "0.27", features = [
  "autoconfig",
  "imap",
  "smtp",
  "oauth2",
  "derive",
  "keyring",
] }
mail-parser = "0.11"
async-trait = "0.1"
base64-simd.workspace = true
hex-simd.workspace = true
urlencoding.workspace = true

md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"
aes = "0.8"
cbc = "0.1"
rand.workspace = true


headless_chrome = { version = "1" }

[dev-dependencies]
tokio.workspace = true
serde.workspace = true
rustls = { version = "0.23", features = ["default"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
