[package]
name = "a2a_tojson"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
configparser = "3.1.0"
csv = "1.3.0"
hex-simd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde_yml = { workspace = true }
a2a_types = { path = "../a2a_types" }
base64-simd.workspace = true
bytes.workspace = true
tracing.workspace = true
globwalk = "0.9"
calamine = "0.25"
