[package]
authors = ["lijia.c@gmail.com"]
edition = "2021"
name = "a2a_nodejs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "serde-json", "anyhow"] }
napi-derive = "2"
a2a_core = { path = "../../a2a_core" }
a2a_types = { path = "../../a2a_types" }
bytes = "1"
serde_json = "1"

[build-dependencies]
napi-build = "2"
