[package]
name = "a2a_py"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_a2apy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = [
  "serde",
  "extension-module",
  "anyhow",
  "generate-import-lib",
  "abi3-py310",
] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }

a2a_core = { path = "../../a2a_core" }
a2a_tojson = { path = "../../a2a_tojson" }
a2a_types = { path = "../../a2a_types" }
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
